[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/stage.gd" type="Script" id=4]

[node name="stage" type="Node2D"]
script = ExtResource( 4 )
initial_ball_position = Vector2( 470, 280 )

[node name="ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 474, 287 )
speed = 1

[node name="wall_right" parent="." instance=ExtResource( 2 )]
position = Vector2( 1023, 290 )

[node name="wall_left" parent="." instance=ExtResource( 2 )]

[node name="paddle2" parent="." instance=ExtResource( 3 )]
position = Vector2( 462, 53 )
speed = 500
player = 2

[node name="paddle1" parent="." instance=ExtResource( 3 )]
position = Vector2( 464, 550 )
speed = 500

[node name="gameoverText" type="Label" parent="."]
visible = false
margin_left = 439.0
margin_top = 251.0
margin_right = 527.0
margin_bottom = 271.0
text = "-game over-"
uppercase = true

[node name="tutorialText" type="Label" parent="."]
margin_left = 359.0
margin_top = 156.0
margin_right = 578.0
margin_bottom = 204.0
text = "player1 controls:- R,L arrows

player2 controls:- A,D keys"
align = 1
uppercase = true

[node name="play_button" type="Button" parent="."]
margin_left = 24.0
margin_top = 20.0
margin_right = 62.0
margin_bottom = 40.0
text = "Play"

[connection signal="button_down" from="play_button" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="play_button" to="tutorialText" method="set_visible" binds= [ false ]]
